--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,19 +1,38 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: gray;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-header {
+  background-color: rgb(63, 63, 63);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  padding: 40px;
+}
+
+.App-title{
+  color: white;
+}
+
+.App-header-btn{
+  margin-left: 6px;
+  color: white;
+}
+
+.App-header-btn-active{
+  color: secondary;
+}
+
+.App-body{
+  padding-right: 40px;
+  padding-left: 40px;
+}
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +41,33 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
+} */
+
+
+/* .rounded {
+  border-radius: 10px;
+} */
+
+/* .App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-@keyframes App-logo-spin {
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+} */
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
