--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -40,11 +40,26 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  max-width: 45%;
-  min-width: 30%;
+  width: 45%;
+  /* max-width: 45%;
+  min-width: 30%; */
   padding: 10px;
   border-radius: 7px;
   height: 300px;
+  position: relative;
+}
+
+.list{
+  background: white;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  /* max-width: 45%;
+  min-width: 30%; */
+  width: 45%;
+  padding: 10px;
+  border-radius: 7px;
+  height: max-content;
   position: relative;
 }
 
